# file_inout

./: 1_write.py  3_write.py  4_write.py  5_write_add02.py  6_withsample.py  fruits.txt  pyproject.toml  write.py  write.spec
