[tool.poetry]
name = "file_inout"
version = "0.1.0"
description = ""
authors = ["teekey1991 <matsunaetaiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pyinstaller = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
